15.5
-----
 
15.4
-----
 * [**] Fixes issue where the new page editor wouldn't always show when selected from the "My Site" page on iOS versions 12.4 and below. 
 * [***] Block Editor: Media editing support in Media & Text block.
 * [***] Block Editor: New block: Social Icons
 * [*] Block Editor: Cover block placeholder is updated to allow users to start the block with a background color

15.3
-----
* [***] Block Editor: Adds Copy, Cut, Paste, and Duplicate functionality to blocks
* [***] Block Editor: Users can now individually edit unsupported blocks found in posts or pages. Not available on selfhosted sites or sites defaulting to classic editor.
* [*] Block Editor: Improved editor loading experience with Ghost Effect.
 
15.2
----
* [*] Block editor: Display content metrics information (blocks, words, characters count).
* [*] Fixed a crash that results in navigating to the block editor quickly after logging out and immediately back in.
* [***] Reader content improved: a lot of fixes in how the content appears when you're reading a post.
* [**] A site's title can now be changed by tapping on the title in the site detail screen.
* [**] Added a new Quick Start task to set a title for a new site. 
* [**] Block editor: Add support for customizing gradient type and angle in Buttons and Cover blocks.

-----

15.1
-----
* [**] Block Editor: Add support to upload videos to Cover Blocks after the editor has closed.
* [*] Block Editor: Display the animation of animated GIFs while editing image blocks.
* [**] Block editor: Adds support for theme colors and gradients.
* [*] App Settings: Added an app-level toggle for light or dark appearance.
* [*] Fix a bug where the Latest Post date on Insights Stats was being calculated incorrectly.
* Block editor: [*] Support for breaking out of captions/citation authors by pressing enter on the following blocks: image, video, gallery, quote, and pullquote.