@@ -164,22 +164,6 @@ extension WPStyleGuide {
         ]
     }
 
-    // MARK: - Stream Header Attributed Text Attributes
-
-    @objc public class func readerStreamHeaderDescriptionAttributes() -> [NSAttributedString.Key: Any] {
-        let font = WPStyleGuide.notoFontForTextStyle(Cards.contentTextStyle)
-
-        let paragraphStyle = NSMutableParagraphStyle()
-        paragraphStyle.lineSpacing = Cards.defaultLineSpacing
-        paragraphStyle.alignment = .center
-
-        return [
-            .paragraphStyle: paragraphStyle,
-            .font: font
-        ]
-    }
-
-
     // MARK: - Apply Card Styles
 
     @objc public class func applyReaderCardSiteButtonStyle(_ button: UIButton) {
@@ -241,12 +225,12 @@ extension WPStyleGuide {
     }
 
     @objc public class func applyReaderStreamHeaderDetailStyle(_ label: UILabel) {
-        label.font = WPStyleGuide.serifFontForTextStyle(.subheadline)
+        label.font = fontForTextStyle(.subheadline, fontWeight: .regular)
         label.textColor = .textSubtle
     }
 
     @objc public class func applyReaderSiteStreamDescriptionStyle(_ label: UILabel) {
-        WPStyleGuide.configureLabelForNotoFont(label, textStyle: .subheadline)
+        label.font = fontForTextStyle(.body, fontWeight: .regular)
         label.textColor = .text
     }
 
@@ -298,35 +282,6 @@ extension WPStyleGuide {
     }
 
     @objc public class func applyReaderFollowButtonStyle(_ button: UIButton) {
-        let side = WPStyleGuide.fontSizeForTextStyle(Cards.buttonTextStyle)
-        let size = CGSize(width: side, height: side)
-
-        let followIcon = UIImage.gridicon(.readerFollow, size: size)
-        let followingIcon = UIImage.gridicon(.readerFollowing, size: size)
-
-        let normalColor = UIColor.primary
-        let highlightedColor = UIColor.primaryDark
-        let selectedColor = UIColor.success
-
-        let tintedFollowIcon = followIcon.imageWithTintColor(normalColor)
-        let tintedFollowingIcon = followingIcon.imageWithTintColor(selectedColor)
-        let highlightIcon = followingIcon.imageWithTintColor(highlightedColor)
-
-        button.setImage(tintedFollowIcon, for: .normal)
-        button.setImage(tintedFollowingIcon, for: .selected)
-        button.setImage(highlightIcon, for: .highlighted)
-
-        button.setTitle(FollowButton.Text.followStringForDisplay, for: UIControl.State())
-        button.setTitle(FollowButton.Text.followingStringForDisplay, for: .selected)
-        button.setTitle(FollowButton.Text.followingStringForDisplay, for: .highlighted)
-
-        button.setTitleColor(normalColor, for: UIControl.State())
-        button.setTitleColor(highlightedColor, for: .highlighted)
-        button.setTitleColor(selectedColor, for: .selected)
-    }
-
-
-    @objc public class func applyReaderFollowTopicButtonStyle(_ button: UIButton) {
         let side = WPStyleGuide.fontSizeForTextStyle(.headline)
         let size = CGSize(width: side, height: side)
 
